# python-fastapi

./: Dockerfile  compose.yaml  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py
fast_zero/routers/: auth.py  todo.py  users.py
migrations/: env.py
migrations/versions/: 1cba610b6956_create_todos_table.py  765436626780_create_users_table.py  7797cadcd9ba_create_updated_at_field_on_user_table.py  c95b6817aac5_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
