[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["Rhuan Bello <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydantic = { extras = ["email"], version = "^2.10.3" }
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 150
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'task format && fastapi dev fast_zero/app.py --host 0.0.0.0'
pre_test = 'task lint'
test = 'task format && pytest --cov=fast_zero -vv'
post_test = 'coverage html'
migration = 'alembic revision --autogenerate -m'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
